--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.10.0",
     "axios": "^0.21.0",
+    "firebase": "^9.17.1",
     "graphql": "^15.3.0",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
